--- a/src/app/business/pages/events/events.component.html
+++ b/src/app/business/pages/events/events.component.html
@@ -1,115 +1,232 @@
 <div class="grid" #cardBody>
-  <div class="col-12">
-    <p-card>
-      <p-toolbar class="mt-3">
-        <div class="p-toolbar-group-left">
-          <button type="button" pButton icon="pi pi-plus" label="Añadir Evento"
-            (click)="newEventDialog=true"></button>
-        </div>
+    <div class="col-12">
+        <p-card>
+            <p-toolbar class="mt-3">
+                <div class="p-toolbar-group-left">
+                    <button
+                        type="button"
+                        pButton
+                        icon="pi pi-plus"
+                        label="Añadir Evento"
+                        (click)="newEventDialog = true"
+                    ></button>
+                </div>
 
-        <div class="p-toolbar-group-right">
-          <p style="margin: 0 1rem 0 0;">Ver en intervalos de</p>
-          <form [formGroup]="slotDurationForm">
-
-            <p-dropdown
-              formControlName="slotDuration"
-              [options]="timeslots"
-              optionLabel="name" />
-          </form>
-        </div>
-      </p-toolbar>
-      <full-calendar
-        class="mt-4"
-        #calendar
-        [options]="calendarOptions"
-        [events]="events"></full-calendar>
-    </p-card>
-  </div>
+                <div class="p-toolbar-group-right">
+                    <p style="margin: 0 1rem 0 0">Ver en intervalos de</p>
+                    <form [formGroup]="slotDurationForm">
+                        <p-dropdown
+                            formControlName="slotDuration"
+                            [options]="timeslots"
+                            optionLabel="name"
+                        />
+                    </form>
+                </div>
+            </p-toolbar>
+            <full-calendar
+                class="mt-4"
+                #calendar
+                [options]="calendarOptions"
+                [events]="events"
+            ></full-calendar>
+        </p-card>
+    </div>
 </div>
 
-<p-dialog header="Detalle del Evento"
-  [style]="{ width: '100rem', height: '100rem' }"
-  [(visible)]="showEventDetailDoalog" [modal]="true" [closable]="true"
-  [maximizable]="true">
-  <full-calendar
-    class="mt-4"
-    #calendarDetail
-    [options]="calendarOptionsDetail"></full-calendar>
+<p-dialog
+    header="Detalle del Evento"
+    [style]="{ width: '100rem', height: '100rem' }"
+    [(visible)]="showEventDetailDoalog"
+    [modal]="true"
+    [closable]="true"
+    [maximizable]="true"
+>
+
+<!-- <div class="table-container">
+  <div class="toolbar">
+    <h2>Excel-like Table</h2>
+    <p-dropdown
+      [options]="colorOptions"
+      (onChange)="applyBackgroundColor($event.value)"
+      placeholder="Select Background Color"
+      [style]="{ width: '150px' }"
+    ></p-dropdown>
+    <p-dropdown
+      [options]="colorOptions"
+      (onChange)="applyTextColor($event.value)"
+      placeholder="Select Text Color"
+      [style]="{ width: '150px' }"
+    ></p-dropdown>
+    <button (click)="addRow()">Add Row</button>
+    <button (click)="addColumn()">Add Column</button>
+  </div>
+  
+  <div class="excel-table">
+    <div class="table-row" *ngFor="let row of data.controls; let rowIndex = index">
+      <div class="table-cell" *ngFor="let col of columns; let colIndex = index"
+           [ngStyle]="getCellStyle(rowIndex, colIndex)"
+           (mousedown)="onMouseDown(rowIndex, colIndex, $event)"
+           (mouseover)="onMouseOver(rowIndex, colIndex)"
+           (mouseup)="onMouseUp()">
+        <p-inputText
+          [formControl]="row.get(colIndex.toString())"
+          [style]="{ width: '100%', height: '100%' }"
+          placeholder="Enter text"
+        ></p-inputText>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="container">
+  <!-- Formulario de registro -->
+  <form [formGroup]="scheduleForm" (ngSubmit)="addActivity()">
+    <h3>Registrar Actividad</h3>
+    <label for="time">Hora:</label>
+    <input id="time" formControlName="time" type="text" placeholder="14:00" />
+    
+    <label for="title">Título:</label>
+    <input id="title" formControlName="title" type="text" placeholder="Título de la actividad" />
+
+    <label for="moderator">Moderador:</label>
+    <input id="moderator" formControlName="moderator" type="text" placeholder="Nombre del moderador" />
+
+    <label for="speaker">Ponente:</label>
+    <input id="speaker" formControlName="speaker" type="text" placeholder="Nombre del ponente" />
+
+    <label for="room">Sala:</label>
+    <input id="room" formControlName="room" type="text" placeholder="Auditorio o sala" />
+
+    <label for="posterNumber">Número de póster (si aplica):</label>
+    <input id="posterNumber" formControlName="posterNumber" type="text" placeholder="Número de póster" />
+
+    <label for="color">Color de fondo (opcional):</label>
+    <input id="color" formControlName="color" type="color" />
+
+    <button type="submit">Agregar Actividad</button>
+  </form>
+
+  <!-- Vista previa del cronograma -->
+  <h3>Vista Previa del Cronograma</h3>
+  <table class="schedule-preview">
+    <thead>
+      <tr>
+        <th>Hora</th>
+        <th>Actividad</th>
+        <th>Moderador</th>
+        <th>Ponente</th>
+        <th>Sala</th>
+        <th>Póster</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let activity of activities" [ngStyle]="{'background-color': activity.color}">
+        <td>{{ activity.time }}</td>
+        <td>{{ activity.title }}</td>
+        <td>{{ activity.moderator }}</td>
+        <td>{{ activity.speaker }}</td>
+        <td>{{ activity.room }}</td>
+        <td>{{ activity.posterNumber }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 </p-dialog>
 
-<p-sidebar [(visible)]="newEventDialog" [style]="{'width': '40%'}" position="right">
-  <ng-template pTemplate="header">
-      <span class="font-semibold text-xl">Agendar una nueva reunión</span>
-  </ng-template>
-  <div class="content">
-    <form [formGroup]="eventForm">
-      <div class="p-fluid grid field mt-4">
-        <p-floatLabel class="col-8">
-          <input id="title" type="text" pInputText formControlName="title" />
-          <label for="title">Título</label>
-        </p-floatLabel>
-        <div class="col-4 d-flex m-auto">
-          <p-colorPicker formControlName="color" />
-          <p class="m-auto">Color del evento</p>
-          
-        </div>
-      </div>
-      <div class="p-fluid grid field mt-5">
-        <div class="field col-12 md:col-12">
-          <span class="p-float-label">
-              <textarea
-                  formControlName="description"
-                  inputId="textarea"
-                  rows="4"
-                  cols="30"
-                  pInputTextarea></textarea>
-              <label for="textarea">Descripción</label>
-          </span>
-        </div>
-      </div>
-      <div class="p-fluid field mt-1">
-        <p-floatLabel class="col-12">
-          <input id="title" type="text" pInputText formControlName="eventLink" />
-          <label for="title">Url de la reunión (opcional)</label>
-        </p-floatLabel>
-      </div>
-      <div class="grid p-fluid field mt-1">
-        <div class="col-6">
-          <p>Inicio</p>
-          <p-calendar
-                formControlName="start"
-                [iconDisplay]="'input'"
-                [showIcon]="true"
-                [showTime]="true" 
-                [hourFormat]="12"
-                dateFormat="dd-mm-yy"></p-calendar>
-        </div>
-        <div class="col-6">
-          <p>Fin</p>
-          <p-calendar
-                formControlName="end"
-                [iconDisplay]="'input'"
-                [showIcon]="true"
-                [showTime]="true" 
-                [hourFormat]="12"
-                dateFormat="dd-mm-yy"></p-calendar>
-        </div>
-      </div>
-        <div class="footer">
-          <button
-            pButton
-            pRipple
-            label="Regresar"
-            icon="pi pi-angle-left"
-            class="p-button-text"
-            iconPos="left"
-            (click)="newEventDialog=false"></button>
-  
-          <p-button label="Registrar" iconPos="right"
-            icon="pi pi-check"
-            [disabled]="eventForm.invalid"
-            (click)="addEvent()" />
-        </div>
-    </form>
-  </div>
+<p-sidebar
+    [(visible)]="newEventDialog"
+    [style]="{ width: '40%' }"
+    position="right"
+>
+    <ng-template pTemplate="header">
+        <span class="font-semibold text-xl">Agendar una nueva reunión</span>
+    </ng-template>
+    <div class="content">
+        <form [formGroup]="eventForm">
+            <div class="p-fluid grid field mt-4">
+                <p-floatLabel class="col-8">
+                    <input
+                        id="title"
+                        type="text"
+                        pInputText
+                        formControlName="title"
+                    />
+                    <label for="title">Título</label>
+                </p-floatLabel>
+                <div class="col-4 d-flex m-auto">
+                    <p-colorPicker formControlName="color" />
+                    <p class="m-auto">Color del evento</p>
+                </div>
+            </div>
+            <div class="p-fluid grid field mt-5">
+                <div class="field col-12 md:col-12">
+                    <span class="p-float-label">
+                        <textarea
+                            formControlName="description"
+                            inputId="textarea"
+                            rows="4"
+                            cols="30"
+                            pInputTextarea
+                        ></textarea>
+                        <label for="textarea">Descripción</label>
+                    </span>
+                </div>
+            </div>
+            <div class="p-fluid field mt-1">
+                <p-floatLabel class="col-12">
+                    <input
+                        id="title"
+                        type="text"
+                        pInputText
+                        formControlName="eventLink"
+                    />
+                    <label for="title">Url de la reunión (opcional)</label>
+                </p-floatLabel>
+            </div>
+            <div class="grid p-fluid field mt-1">
+                <div class="col-6">
+                    <p>Inicio</p>
+                    <p-calendar
+                        formControlName="start"
+                        [iconDisplay]="'input'"
+                        [showIcon]="true"
+                        [showTime]="true"
+                        [hourFormat]="12"
+                        dateFormat="dd-mm-yy"
+                    ></p-calendar>
+                </div>
+                <div class="col-6">
+                    <p>Fin</p>
+                    <p-calendar
+                        formControlName="end"
+                        [iconDisplay]="'input'"
+                        [showIcon]="true"
+                        [showTime]="true"
+                        [hourFormat]="12"
+                        dateFormat="dd-mm-yy"
+                    ></p-calendar>
+                </div>
+            </div>
+            <div class="footer">
+                <button
+                    pButton
+                    pRipple
+                    label="Regresar"
+                    icon="pi pi-angle-left"
+                    class="p-button-text"
+                    iconPos="left"
+                    (click)="newEventDialog = false"
+                ></button>
+
+                <p-button
+                    label="Registrar"
+                    iconPos="right"
+                    icon="pi pi-check"
+                    [disabled]="eventForm.invalid"
+                    (click)="addEvent()"
+                />
+            </div>
+        </form>
+    </div>
 </p-sidebar>
