--- a/src/app/business/pages/plans-register/plans-register.component.html
+++ b/src/app/business/pages/plans-register/plans-register.component.html
@@ -68,6 +68,7 @@
                                     class="p-button-danger"
                                     [rounded]="true"
                                     [text]="true"
+                                    pTooltip="Eliminar actividad"
                                     (click)="removeActividad(i)"
                                 ></button>
                             </div>
@@ -136,6 +137,7 @@
                                                     [rounded]="true"
                                                     [text]="true"
                                                     class="p-button-danger ml-2"
+                                                    pTooltip="Eliminar tarea"
                                                     (click)="removeTarea(i, j)"
                                                 ></button>
                                             </div>
