--- a/src/app/business/pages/users/users.component.html
+++ b/src/app/business/pages/users/users.component.html
@@ -155,9 +155,9 @@
             <div class="field mt-5">
                 <span class="p-float-label">
                     <p-dropdown
+                        class="display-grid"
                         formControlName="role"
                         inputId="role"
-                        class="w-full"
                         [autoDisplayFirst]="false"
                         [options]="roles"
                         optionLabel="name"></p-dropdown>
@@ -273,7 +273,7 @@
                             <p-dropdown
                                 formControlName="cycle"
                                 inputId="cycle"
-                                class="w-full"
+                                class="display-grid"
                                 [autoDisplayFirst]="false"
                                 [options]="cycles"
                                 optionLabel="name"></p-dropdown>
